crates/ruff_linter/src/rules/flake8_return/snapshots/ruff_linter__rules__flake8_return__tests__RET502_RET502.py.snap
---
source: crates/ruff_linter/src/rules/flake8_return/mod.rs
---
RET502 [*] Do not implicitly `return None` in function able to return non-`None` value
 --> RET502.py:3:9
  |
1 | def x(y):
2 |     if not y:
3 |         return  # error
  |         ^^^^^^
4 |     return 1
  |
help: Add explicit `None` return value
  |
3 |         return None  # error
  |                ++++
